<resources>
    <string name="collect">加书架</string>
    <string name="about">关于%s</string>
    <string name="about_title">关于</string>
    <string name="accounts_loading">正在登录...</string>
    <string name="action_settings">settings</string>
    <string name="actionsheet">ActionSheet</string>
    <string name="add_to_shelf">加书架</string>
    <string name="afternoon">下午</string>
    <string name="agree">赞</string>
    <string name="aio_yesterday">昨天</string>
    <string name="alarm_notice_1">你的阅读造就了你，打开%s寻找你的世界吧！</string>
    <string name="alarm_notice_2">还记得上次阅读的那本书么，打开%s把他读完吧！</string>
    <string name="alarm_notice_3">几万本小说图书等你来读，打开%s来读吧！</string>
    <string name="alarm_notice_4">当你悠闲的时候，打开%s享受阅读时光吧！</string>
    <string name="alarm_notice_5">生命有两种姿态行走或者阅读，打开%s边走边读吧！</string>
    <string name="alert_dialog_audio_buy">购买音频</string>
    <string name="alert_dialog_audio_subscribe">订阅音频</string>
    <string name="alert_dialog_buy">购买</string>
    <string name="alert_dialog_buy_balance_charge_other_count">充值其他金额</string>
    <string name="alert_dialog_buy_balance_insufficient">余额不足，充值并购买</string>
    <string name="alert_dialog_buy_confirm">确认购买</string>
    <string name="alert_dialog_cancel">取消</string>
    <string name="alert_dialog_cloud_cancel">取消</string>
    <string name="alert_dialog_cloud_note_cloud">覆盖</string>
    <string name="alert_dialog_cloud_note_content">本地有%1$d条笔记，云端有%2$d笔记，用云端笔记覆盖本地笔记？</string>
    <string name="alert_dialog_cloud_note_local">不覆盖</string>
    <string name="alert_dialog_cloud_note_title">笔记同步提示</string>
    <string name="alert_dialog_cloud_ok">跳转</string>
    <string name="alert_dialog_exit_live">退出</string>
    <string name="alert_dialog_go_get_permission">授予权限</string>
    <string name="alert_dialog_keep_downloading">继续下载</string>
    <string name="alert_dialog_not_enough_balance">余额不足，请充值</string>
    <string name="alert_dialog_ok">确认</string>
    <string name="alert_dialog_open_confirm">确认购买</string>
    <string name="alert_dialog_rent">租书，在线免费读整本</string>
    <string name="alert_dialog_rent_confirm">确认租书</string>
    <string name="alert_dialog_subscription">订阅</string>
    <string name="alert_dialog_subscription_balance_insufficient">余额不足，充值并订阅</string>
    <string name="alert_dialog_subscription_confirm">确认订阅</string>
    <string name="allnote_title">我的笔记</string>
    <string name="already_on_shelf">已加书架</string>
    <string name="app_name">QQ阅读</string>
    <string name="app_recommend">应用推荐</string>
    <string name="app_sinature">be910af39a26a4a992c6fd01a143ed19</string>
    <string name="app_sinature_note">您当前使用的%s为盗版\n请通过正规渠道重新下载</string>
    <string name="app_sinature_note_title">信息安全警告</string>
    <string name="app_update">检查更新</string>
    <string name="assist_text">助播</string>
    <string name="audio_already_buy_tip">音频已购买，请稍后重试</string>
    <string name="audio_book_pay_success">购买成功</string>
    <string name="audio_check_level_limit">由于版权限制，本音频暂不提供购买</string>
    <string name="audio_colud_info2">上次听到第</string>
    <string name="audio_colud_info3">集，确定立即同步该音频进度？</string>
    <string name="audio_controller_dialog_permission_ok">我知道了</string>
    <string name="audio_controller_dialog_permission_tips">检测到录音失败，请尝试开启录音权限，\n安全中心-授权管理-应用权限管理-应用管理-QQ阅读-录音-允许</string>
    <string name="audio_controller_dialog_rerecord">重新录制将删除当前录音</string>
    <string name="audio_controller_dialog_rerecord_cancel">取消</string>
    <string name="audio_controller_dialog_rerecord_submit">确认重录</string>
    <string name="audio_controller_state_idle">点击开始录音，最多60秒</string>
    <string name="audio_controller_state_playing">点击停止播放</string>
    <string name="audio_controller_state_ready">点击播放试听</string>
    <string name="audio_controller_state_recording">点击完成录音</string>
    <string name="audio_controller_toast_tooshort">录音时间太短</string>
    <string name="audio_error_common_tip">出错啦，请稍后重试</string>
    <string name="audio_limit_for_xmly">版权限制，不支持VIP/包月/年费折扣，仅可用书币购买</string>
    <string name="audio_listened_time">听至 %s</string>
    <string name="audio_off_market_tip">内容已下架，相关内容无法购买</string>
    <string name="audio_out_of_time_hour">%d小时后过期</string>
    <string name="audio_out_of_time_min">%d分钟后过期</string>
    <string name="audio_panicgift_buttom_tips">每日累计播放音频满%1$d分钟可抢好礼,每日共发放%2$d书券,每周每个账号最多可获得%3$d份礼品</string>
    <string name="audio_panicgift_chance">有机会获得%d书券</string>
    <string name="audio_panicgift_chance_available">抢好礼</string>
    <string name="audio_panicgift_chance_unavailable">时长不足,还需听%d分钟</string>
    <string name="audio_panicgift_do_loading">正在抢好礼...</string>
    <string name="audio_panicgift_init_loading">正在加载</string>
    <string name="audio_panicgift_listentime">今日播放时长:%d分钟</string>
    <string name="audio_panicgift_obtain_failed">很遗憾没有抢到</string>
    <string name="audio_panicgift_obtain_failed_tip">明天再来试试吧</string>
    <string name="audio_panicgift_obtain_success">恭喜获得%d书券</string>
    <string name="audio_panicgift_obtain_success_tip">礼品会尽快发放到你的账号中,注意查收</string>
    <string name="audio_panicgift_reachmax">本周已获得%d份好礼</string>
    <string name="audio_panicgift_reachmax_tip">下周再来抢吧</string>
    <string name="audio_panicgift_title">播放时长抢好礼</string>
    <string name="audio_paypage_pay_all_ok">已购买全集</string>
    <string name="audio_play_gift_tip_content">你可以免费试听</string>
    <string name="audio_play_gift_tip_title">选择你要播放的音频</string>
    <string name="audio_player_top_menu_audio_detail">音频详情</string>
    <string name="audio_player_top_menu_auto_buy">自动购买</string>
    <string name="audio_player_top_menu_read_private">私密阅读</string>
    <string name="audio_player_top_menu_share">分享</string>
    <string name="audio_question_autorefusetime">%s，自动拒绝</string>
    <string name="audio_question_charge_msg">书币余额不足，请先充值</string>
    <string name="audio_question_charge_submit">立即充值</string>
    <string name="audio_question_charge_submit_1">余额不足，请先充值</string>
    <string name="audio_question_detail_notheard">请听后再评论</string>
    <string name="audio_question_detail_title">回答详情</string>
    <string name="audio_question_eavesdropping_cancel">取消</string>
    <string name="audio_question_eavesdropping_msg">悄悄听本回答，需要支付%s书币</string>
    <string name="audio_question_eavesdropping_submit">确认支付</string>
    <string name="audio_question_refusetitle">拒绝回答该提问</string>
    <string name="audio_question_reporttitle">举报成功，提问书币归你</string>
    <string name="audio_quiz_edit_hint">输入问题，等作者语音回答；超过48小时未回答，将全额退款到账户（不少于10字，最多60字)</string>
    <string name="audio_quiz_empty">暂无回答，赶快提问吧</string>
    <string name="audio_quiz_maxbookcoin_toast">不能超过最大书币数</string>
    <string name="audio_quiz_maxinput_toast">已达字数上限</string>
    <string name="audio_quiz_mininput_toast">问题过短，请最少输入10个字</string>
    <string name="audio_quiz_pay_addmoney">我要加价</string>
    <string name="audio_quiz_pay_needtocharge_message">发起本提问，需要支付%s书币</string>
    <string name="audio_quiz_pay_needtocharge_positive">余额不足，请先充值</string>
    <string name="audio_quiz_pay_needtopay">需支付：</string>
    <string name="audio_quiz_pay_submit">发起提问</string>
    <string name="audio_quiz_pay_submit_all">查看全部</string>
    <string name="audio_quiz_submit_toast">正在提问…</string>
    <string name="audio_quiz_title">向%s提问</string>
    <string name="audio_quiz_upload">正在发送…</string>
    <string name="audio_zone">音频专区</string>
    <string name="author_center_fenda_income_detail">回答：%1$d书币，被悄悄听：%2$d书币</string>
    <string name="author_center_fenda_month_income">月收入：</string>
    <string name="author_center_fenda_no_questions">暂无提问</string>
    <string name="author_center_fenda_no_waiting_questions">暂无待回答的提问</string>
    <string name="author_center_fenda_overdue_time">%s后过期</string>
    <string name="author_center_header_hint">简单描述一下自己</string>
    <string name="author_center_my_fans_qa_page">粉丝问答</string>
    <string name="author_center_my_home_page">我的主页</string>
    <string name="author_center_waiting_answer_count">待回答(%d)</string>
    <string name="author_edit_fenda_introduction_hint">简单描述一下自己(选填，最多100字)</string>
    <string name="author_edit_fenda_onmax_length">已达字数上限</string>
    <string name="author_edit_fenda_price_error">你输入的数字不合法…</string>
    <string name="author_edit_fenda_server_error">出错啦，请稍后重试</string>
    <string name="author_edit_fenda_success">设置成功</string>
    <string name="author_edit_fenda_title">编辑我的问答</string>
    <string name="author_edit_fenda_upload_busy">正在上传</string>
    <string name="author_info">作者：%s</string>
    <string name="author_intro_title_fans_count">作品粉丝</string>
    <string name="author_intro_title_main_book_type">主要类型</string>
    <string name="author_intro_title_words_count">累计创作</string>
    <string name="author_qa_income_total_title">分成前累计收入(书币)</string>
    <string name="author_qa_income_wx_bind_info_not_enough">绑定失败，请联系您的责编补全相关信息后再绑定。</string>
    <string name="author_qa_list_no_data_tip">暂无记录</string>
    <string name="author_qa_settle_balance_total_title">累计结算(元)</string>
    <string name="author_qa_settle_balance_user_info_tip">解除/修改绑定，请前往作家助手客户端，或联系责编。</string>
    <string name="author_word_complete">本书完\n来参加小伙伴们的讨论吧</string>
    <string name="author_word_no_complete">作者努力码字中\n后续章节敬请期待~</string>
    <string name="author_wx_bind_confirm_info_tip">用户确认，本页面所填写用户信息即%s乙方信息</string>
    <string name="author_wx_bind_contract_read_tip_begining">我已阅读并接受</string>
    <string name="author_wx_bind_info_copy_success">复制成功</string>
    <string name="author_wx_bind_qqreader_wx_id_copy">QQreader_Tencent（点击复制）</string>
    <string name="author_wx_bind_qqreader_wx_tip">关注QQ阅读订阅号，接收结算消息。</string>
    <string name="author_wx_bind_wx_info_correct_tip">本人确认所绑定的微信账号系本人所有账号，所有信息均真实有效</string>
    <string name="auto_buy_next_section">自动购买下一话</string>
    <string name="auto_pay">自动购买</string>
    <string name="auto_pay_next">自动购买下一章</string>
    <string name="auto_pay_next_audio">自动购买</string>
    <string name="be_kicked">已被移出房间</string>
    <string name="before_date">更早</string>
    <string name="before_yesterday">前天</string>
    <string name="begin_download_add_task">已加入下载队列</string>
    <string name="begin_download_task">开始下载</string>
    <string name="bind_wx_info">绑定微信</string>
    <string name="blank_refresh_btn">刷新</string>
    <string name="book_last_operator_time">阅读时间：</string>
    <string name="book_list_preference_change_btn_text">确认开启</string>
    <string name="book_list_preference_change_title">开启专属推荐</string>
    <string name="book_stand_title">书架  %1$d本</string>
    <string name="bookcity_name">QQ书城</string>
    <string name="bookclub_bookcomment_title">评价本书</string>
    <string name="buy_book_name">《%s》</string>
    <string name="buy_book_price">价格：</string>
    <string name="buy_book_type">订购内容：全本</string>
    <string name="chapter_bug0">错别字</string>
    <string name="chapter_bug1">章节错乱</string>
    <string name="chapter_bug2">内容缺失</string>
    <string name="chapter_bug3">图片缺失</string>
    <string name="chapter_bug4">排版混乱</string>
    <string name="login_verify_text_notice">换一张</string>
    <string name="login_verify_text_title">请输入验证码</string>
    <string name="no_result_text">很抱歉，当前筛选条件结果为空</string>
    <string name="no_result_text_1">试试其他组合</string>
    <string name="notices_close">关闭</string>
    <string name="notices_open">开启</string>
    <string name="qa_edit_ask_bcoin">书币</string>
    <string name="qa_edit_ask_to">向我提问需支付</string>
    <string name="qq_reader_labour_contract">《%s》</string>
    <string name="report_bug_title">请选择错误类型</string>
    <string name="save">保存</string>
    <string name="setting_content">书籍更新提醒</string>
    <string name="setting_go_back">返回</string>
    <string name="setting_titile">设置</string>
    <string name="verify_code">验证码:</string>
    <string name="wx_bind_info_address_tip">地址：</string>
    <string name="wx_bind_info_gender_tip">性别：</string>
    <string name="wx_bind_info_id_tip">身份证号码：</string>
    <string name="wx_bind_info_name_tip">真实姓名：</string>
    <string name="xlistview_footer_hint_nonedata">已显示全部</string>
</resources>