<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@a/concept_card_bg" android:layout_width="match_parent" android:layout_height="match_parent"
    <LinearLayout android:orientation="vertical" android:paddingLeft="16dp" android:paddingRight="16dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/text_size_class_3" android:textColor="@color/text_color_c102" android:id="@id/tv_wx_bind_tip" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="14dp" />
        <TextView android:textSize="@dimen/text_size_class_2" android:textColor="@color/text_color_c103" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="18dp" android:text="@string/author_wx_bind_qqreader_wx_tip" />
        <TextView android:textSize="@dimen/text_size_class_2" android:textColor="@a/author_wx_bind_card_clickable_textcolor_selector" android:id="@id/tv_copy" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="2dp" android:layout_marginBottom="19dp" android:text="@string/author_wx_bind_qqreader_wx_id_copy" />
    </LinearLayout>
    <View android:layout_marginBottom="14dp" style="@style/line_divider_horizontal_style" />
    <LinearLayout android:orientation="vertical" android:paddingLeft="16dp" android:paddingRight="16dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/text_size_class_2" android:textColor="@color/text_color_c103" android:id="@id/tv_contract_part_b_info_tip" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="14dp" android:text="@string/author_wx_bind_confirm_info_tip" />
        <TextView android:id="@id/tv_name" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/wx_bind_info_name_tip" style="@style/author_wx_bind_info_text_style" />
        <TextView android:id="@id/tv_gender" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/wx_bind_info_gender_tip" style="@style/author_wx_bind_info_text_style" />
        <TextView android:id="@id/tv_id_number" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/wx_bind_info_id_tip" style="@style/author_wx_bind_info_text_style" />
        <TextView android:id="@id/tv_address" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/wx_bind_info_address_tip" style="@style/author_wx_bind_info_text_style" />
        <LinearLayout android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <CheckBox android:id="@id/cb_author_wx_bind_contract" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" style="@style/author_wx_bind_info_checkbox" />
            <TextView android:textSize="@dimen/text_size_class_2" android:textColor="@color/text_color_c103" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/author_wx_bind_contract_read_tip_begining" />
            <TextView android:textSize="@dimen/text_size_class_2" android:textColor="@a/author_wx_bind_card_clickable_textcolor_selector" android:id="@id/tv_qqreader_contract" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/qq_reader_labour_contract" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="40dp" android:minHeight="34dp">
            <CheckBox android:id="@id/cb_author_wx_bind_info_correct" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" style="@style/author_wx_bind_info_checkbox" />
            <TextView android:textSize="@dimen/text_size_class_2" android:textColor="@color/text_color_c103" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="4dp" android:text="@string/author_wx_bind_wx_info_correct_tip" />
        </LinearLayout>
    </LinearLayout>
    <TextView android:enabled="true" android:id="@id/tv_bind_wx" android:clickable="true" android:text="@string/bind_wx_info" style="@style/button_b6" />
</LinearLayout>
