<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/xlistview_footer_content" android:background="@a/concept_divider_bg" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x3c01">
        <ProgressBar android:id="@id/xlistview_footer_progressbar" android:layout_width="UNKNOWN_DATA_0x1c01" android:layout_height="UNKNOWN_DATA_0x1c01" android:maxWidth="28dp" android:maxHeight="28dp" android:indeterminateOnly="true" android:indeterminateDrawable="@drawable/progress_loading" android:indeterminateDuration="1000" android:minWidth="28dp" android:minHeight="28dp" />
        <TextView android:textSize="@dimen/listview_fopter_tips_tx_size" android:textColor="@a/listview_footer_normal_color" android:id="@id/xlistview_footer_hint_textview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3dp" android:text="@string/xlistview_footer_hint_nonedata" />
    </LinearLayout>
    <com.qq.reader.view.EmptyView empty:id="@id/xlistview_emptyview" empty:background="@a/screen_bg_color" empty:visibility="gone" empty:layout_width="match_parent" empty:layout_height="match_parent" empty:contentTitle="@string/no_result_text" empty:contentText="@string/no_result_text_1" empty:mIcon="@drawable/empty07" empty:autoCenterInListView="true" empty:type="radial" />
</FrameLayout>
