<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="UNKNOWN_DATA_0x12401" android:layout_height="wrap_content">
    <TextView android:textSize="@c/text_size_class_5" android:textColor="#555555" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/verify_dialog_title" android:background="@drawable/dialog_top" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x3501" android:text="@string/login_verify_text_title" />
    <RelativeLayout android:id="@id/verify_dialog_mid" android:background="@a/screen_bg_color" android:paddingBottom="20dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@id/verify_dialog_title" android:layout_alignLeft="@id/verify_dialog_title" android:layout_alignRight="@id/verify_dialog_title">
        <LinearLayout android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="horizontal" android:id="@id/verifyInfo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_centerHorizontal="true">
            <ImageView android:id="@id/verifyImage" android:layout_width="wrap_content" android:layout_height="UNKNOWN_DATA_0x10a66621" android:scaleType="fitXY" />
            <TextView android:textSize="@dimen/text_size_class_4" android:textColor="#5a86b3" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@id/getVerifyImage" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="UNKNOWN_DATA_0x10a66621" android:layout_marginLeft="16dp" android:text="@string/login_verify_text_notice" />
        </LinearLayout>
        <RelativeLayout android:background="@drawable/login_out_rect" android:layout_width="UNKNOWN_DATA_0xee01" android:layout_height="UNKNOWN_DATA_0x2a01" android:layout_marginTop="16dp" android:layout_below="@id/verifyInfo" android:layout_centerHorizontal="true">
            <TextView android:textSize="16sp" android:textColor="@a/textcolor_gray" android:id="@id/verify_code_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:text="@string/verify_code" android:layout_centerVertical="true" />
            <EditText android:id="@id/verifyIpnut" android:paddingLeft="7dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:maxLength="6" android:layout_toRightOf="@id/verify_code_tv" android:layout_centerVertical="true" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" style="@style/login_dialog_edit" />
        </RelativeLayout>
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/verify_dialog_bottom" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@id/verify_dialog_mid" android:layout_alignLeft="@id/verify_dialog_title" android:layout_alignRight="@id/verify_dialog_title">
        <Button android:textSize="16sp" android:textColor="@color/text_color_c104" android:id="@id/verify_btn_sure" android:background="@drawable/verify_dialog_confirm" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/alert_dialog_ok" android:layout_weight="1.0" />
        <Button android:textSize="16sp" android:textColor="#555555" android:id="@id/verify_btn_cancel" android:background="@drawable/verify_dialog_cancel" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/alert_dialog_cancel" android:layout_weight="1.0" />
    </LinearLayout>
</RelativeLayout>
