<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@a/screen_bg_color" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:orientation="horizontal" android:background="@drawable/setting_title_bg" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x3201">
        <Button android:textSize="15sp" android:textColor="@a/textcolor_gray" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/gobackbutton" android:background="@drawable/setting_goback_btn" android:layout_width="UNKNOWN_DATA_0x3c01" android:layout_height="UNKNOWN_DATA_0x2801" android:layout_marginLeft="15dp" android:text="@string/setting_go_back" android:layout_alignParentLeft="true" android:layout_centerInParent="true" />
        <TextView android:textSize="20sp" android:textColor="@a/textcolor_black" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_titile" android:layout_centerInParent="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
        <RelativeLayout android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:orientation="horizontal" android:background="@drawable/settingconten_bg" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x3201" android:layout_marginLeft="15dp" android:layout_marginTop="41dp" android:layout_marginRight="15dp">
            <LinearLayout android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_alignParentLeft="true">
                <TextView android:textSize="16sp" android:textColor="@a/textcolor_black" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="18dp" android:text="@string/setting_content" />
            </LinearLayout>
            <LinearLayout android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_alignParentRight="true" android:layout_centerVertical="true"
                <LinearLayout android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:orientation="horizontal" android:id="@id/notification_switch" android:layout_width="UNKNOWN_DATA_0x6c01" android:layout_height="UNKNOWN_DATA_0x2801" android:layout_marginRight="12dp" android:weightSum="2.0">
                    <TextView android:textSize="13sp" android:textColor="@a/setting_switcher_text_color" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@id/notification_switch_close" android:background="@drawable/common_radiobutton_bg_selector" android:layout_width="UNKNOWN_DATA_0x3001" android:layout_height="UNKNOWN_DATA_0x2301" android:text="@string/notices_close" android:layout_weight="1.0" />
                    <TextView android:textSize="13sp" android:textColor="@a/setting_switcher_text_color" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@id/notification_switch_open" android:background="@drawable/common_radiobutton_bg_selector" android:layout_width="UNKNOWN_DATA_0x3001" android:layout_height="UNKNOWN_DATA_0x2301" android:text="@string/notices_open" android:layout_weight="1.0" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
